Add quality-of-life improvements for bodies
On the request side, you can now match the request body against one or
more substrings and regular expressions, which makes life easier for
those of us who need to deal with request bodies that have
non-deterministic elements in them (like nonces).

On the response side. you can now write your JSON response bodies *as
JSON*, which is significantly easier than having to escape
eleventy-billion quotes, and match up braces by eye.

To avoid any bloat or unpleasant interactions with existing code, all
the new features are gated behind, well, features.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,14 @@ authors = [
 ]
 
 [features]
+json = ["dep:serde_json"]
+matching = []
+regex = ["dep:regex"]
 
 [dependencies]
+regex = { version = "1", optional = true }
 serde = { version = "1.0.127", features = ["derive"] }
+serde_json = { version = "1", optional = true }
 void = "1.0.2"
 chrono = "0.4.19"
 url = { version = "2.2.2", features = ["serde"] }
